# taobao-image-saver

./: .gitignore  README.md  chrome-extension\manifest.json  chrome-extension\service_worker.js  login_taobao_first.bat  pyproject.toml  requirements.txt  run_taobao_image_saver.bat  src\taobao_image_saver\app\config.py  src\taobao_image_saver\app\worker.py  src\taobao_image_saver\browser\models.py  src\taobao_image_saver\browser\url_utils.py  src\taobao_image_saver\storage\file_names.py  src\taobao_image_saver\storage\metadata.py  tests\test_extractor.py  tests\test_image_store.py  tests\test_taobao_selection.py
chrome-extension/: popup.css  popup.html  popup.js
src/taobao_image_saver/: __init__.py
src/taobao_image_saver/app/: config.py  main.py  worker.py
src/taobao_image_saver/browser/: extractor.py  login_helper.py  taobao.py
src/taobao_image_saver/storage/: image_store.py
tests/: test_extractor.py  test_file_names.py  test_image_store.py  test_url_utils.py
